remove bg-back from about section

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
    </section>
     <!-- end introduction sec-->
     <!-- start about sec -->
-    <section class="about my-lg-5 py-lg-4 pt-2 mb-4 pb-5 bg-black" id="about">
+    <section class="about my-lg-5 py-lg-4 pt-2 mb-4 pb-5" id="about">
           <div class="container">
             <div class="top-section text-center">
               <div class="title">
