Create Modal using js >> Gallery section(Modal for All imgs ,tab= All)

--- a/index.html
+++ b/index.html
@@ -987,34 +987,34 @@
     
     </ul>
     <div class="tab-content mb-5" id="myTabContent">
-      <div class="tab-pane fade show active" id="All-tab-pane" role="tabpanel" aria-labelledby="All-tab" tabindex="0">
+      <div class="tab-pane fade show active all_imgs" id="All-tab-pane" role="tabpanel" aria-labelledby="All-tab" tabindex="0">
        <div class="row ">
         <div class="col-lg-4 col-md-4 d-flex flex-column row-gap-4 ">
           <div class="gallery-img">
             <!-- <span class="st-link-hover z-1"><i class="fas fa-arrows-alt"></i></span> -->
-            <img src="assets/img/img1_lg.jpg " alt="img1" class="G-zoom-in">
+            <img src="./assets/img/img1_lg.jpg " alt="img1" class="G-zoom-in ">
           </div>
           <div class="gallery-img height66 ">
-            <img src="assets/img/img4_lg.jpg " alt="img4" class="object-fit-cover special-img4 G-zoom-in">
+            <img src="./assets/img/img4_lg.jpg " alt="img4" class="object-fit-cover special-img4 G-zoom-in ">
           </div>
         </div>
         <div class="col-lg-4 col-md-4 d-flex flex-column row-gap-4 ">
           <div class="gallery-img">
-            <img src="assets/img/img2_lg.jpg " alt="img2" class="img-fluid G-zoom-in">
+            <img src="./assets/img/img2_lg.jpg " alt="img2" class="img-fluid G-zoom-in ">
           </div>
           <div class="gallery-img">
-            <img src="assets/img/img5_lg.jpg " alt="img5" class="img-fluid G-zoom-in">
+            <img src="./assets/img/img5_lg.jpg " alt="img5" class="img-fluid G-zoom-in ">
           </div>
           <div class="gallery-img">
-            <img src="assets/img/img6_lg.jpg " alt="img6" class="img-fluid G-zoom-in">
+            <img src="./assets/img/img6_lg.jpg " alt="img6" class="img-fluid G-zoom-in ">
           </div>
         </div>
         <div class="col-lg-4 col-md-4 d-flex flex-column row-gap-4 ">
           <div class="gallery-img height66 ">
-            <img src="assets/img/img3_lg.jpg " alt="img3" class="object-fit-cover special-img3 G-zoom-in">
+            <img src="./assets/img/img3_lg.jpg " alt="img3" class="object-fit-cover special-img3 G-zoom-in ">
           </div>
           <div class="gallery-img ">
-            <img src="assets/img/img7_lg.jpg " alt="img7" class="G-zoom-in" >
+            <img src="./assets/img/img7_lg.jpg " alt="img7" class="G-zoom-in " >
           </div>
         </div>
        </div>
@@ -1117,6 +1117,19 @@
     </div>
     </div>
    </section>
+   <!-- start js modal -->
+    <section class="my_modal">
+        <div class="modal_content">
+          <span class="page_num"></span>
+            <i class="fa-solid fa-xmark close_icon"></i>
+            <i class="fa-solid fa-arrow-left left_arrow"></i>
+            <img src="" alt="gallery_img" class="modal_img w-75">
+            <i class="fa-solid fa-arrow-right right_arrow"></i>
+        </div>
+    </section>
+
+
+    <!-- end js modal -->
   <!-- end gallery sec -->
 
 <!-- start procedures sec -->
